--- a/lm2.html
+++ b/lm2.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>LLM 설정 및 채팅 UI</title>
   <style>
+      body {
+    margin: 0;
+    padding: 0;
+    background-color: #ffffff;
+    font-family: Arial, sans-serif;
+  }
     :root{
       --bg:#ffffff;
       --muted:#8b8b95;
