--- a/index.html
+++ b/index.html
@@ -534,91 +534,76 @@
   const tokenBox = $('#tokenBox'), embedBox = $('#embedBox'), mTokens = $('#mTokens'), mDim = $('#mDim'), mSource = $('#mSource');
 
   function simpleTokenizer(str){
-    // 안정성 보강: Segmenter가 없거나 예외가 발생하면 단순 공백 기반 분할로 폴백
+    // Fallback tokenizer using Intl.Segmenter + punctuation split
     if(!str) return [];
-    try{
-      const seg = ('Segmenter' in Intl) ? new Intl.Segmenter('ko', { granularity:'word' }) : null;
-      const words = seg ? Array.from(seg.segment(str)).map(s => s.segment) : str.split(/\s+/g);
-      const tokens = [];
-      for(const w of words){
-        if(!w || !w.trim()) continue;
-        // ⚠️ 여기에 있던 '/' 미이스케이프 문제를 고쳤습니다: '\/'
-        // 또한 특수문자 분리를 안정적으로 적용
-        const parts = w.split(/([.,!?;:"'(){}\[\]<>\/\\\-_=+*^%$#@`~|…])/g).filter(Boolean);
-        tokens.push(...parts.filter(p=>p.trim()!==''));
-      }
-      return tokens;
-    }catch(e){
-      // 매우 드문 환경(구형 브라우저 등)을 위한 폴백
-      return str.match(/\S+/g) || [];
+    const seg = ('Segmenter' in Intl) ? new Intl.Segmenter('ko', { granularity:'word' }) : null;
+    const words = seg ? Array.from(seg.segment(str)).map(s => s.segment) : str.split(/\s+/g);
+    const tokens = [];
+    for(const w of words){
+      if(!w.trim()) continue;
+      const parts = w.split(/([.,!?;:"'(){}\[\]<>/\\\-_=+*^%$#@`~|…])/g).filter(Boolean);
+      tokens.push(...parts.filter(p=>p.trim()!==''));
     }
+    return tokens;
   }
 
   async function refreshTokenAndEmbedding(){
-    const text = state.lastUserText || '';
-    mSource.textContent = text || '-';
-    if(!text){
-      tokenBox.textContent = '아직 분석할 문장이 없습니다. 먼저 왼쪽에서 메시지를 입력해 주세요.';
-      embedBox.textContent = '토큰을 분석한 뒤 여기에 표시됩니다.';
-      mTokens.textContent = '0'; mDim.textContent = '-';
-      return;
-    }
-    const tokens = simpleTokenizer(text);
-    mTokens.textContent = String(tokens.length);
-    tokenBox.textContent = tokens.map((t,i)=>`${i+1}. ${JSON.stringify(t)}`).join('\n');
-
-    // Embedding per token (batch, limit 50)
-    const first50 = tokens.slice(0,50);
-    embedBox.textContent = '임베딩 계산 중... ';
-    try{
-      let vectors = [];
-      if(first50.length===0){
-        embedBox.textContent = '임베딩할 토큰이 없습니다.';
-        mDim.textContent = '-';
-        return;
-      }
-      if(state.provider==='openai'){
-        if(!state.openaiKey) throw new Error('OpenAI API Key가 필요합니다.');
-        const body = { model:'text-embedding-3-small', input: first50 };
-        const res = await fetch('https://api.openai.com/v1/embeddings', {
-          method:'POST', headers:{ 'Content-Type':'application/json', 'Authorization':'Bearer '+state.openaiKey }, body: JSON.stringify(body)
-        });
-        if(!res.ok){
-          const t = await res.text(); throw new Error('OpenAI 임베딩 오류: ' + t);
+        const text = state.lastUserText || '';
+        mSource.textContent = text || '-';
+        if(!text){
+          tokenBox.textContent = '아직 분석할 문장이 없습니다. 먼저 왼쪽에서 메시지를 입력해 주세요.';
+          embedBox.textContent = '토큰을 분석한 뒤 여기에 표시됩니다.';
+          mTokens.textContent = '0'; mDim.textContent = '-';
+          return;
         }
-        const data = await res.json();
-        vectors = (data.data||[]).map(d=>d.embedding || d);
-      }else{
-        if(!state.geminiKey) throw new Error('Gemini API Key가 필요합니다.');
-        const url = 'https://generativelanguage.googleapis.com/v1beta/models/text-embedding-004:batchEmbedContents?key='+encodeURIComponent(state.geminiKey);
-        const body = {
-          requests: first50.map(t=>({ content: { parts:[{ text: t }] } }))
-        };
-        const res = await fetch(url, { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify(body) });
-        if(!res.ok){ const t = await res.text(); throw new Error('Gemini 임베딩 오류: ' + t); }
-        const data = await res.json();
-        vectors = (data.embeddings||[]).map(e=>e.values || e);
+        const tokens = simpleTokenizer(text);
+        mTokens.textContent = String(tokens.length);
+        tokenBox.textContent = tokens.map((t,i)=>`${i+1}. ${JSON.stringify(t)}`).join('\n');
+
+        // Embedding per token (batch, limit 50)
+        const first50 = tokens.slice(0,50);
+        embedBox.textContent = '임베딩 계산 중... ';
+        try{
+          let vectors = [];
+          if(state.provider==='openai'){
+            if(!state.openaiKey) throw new Error('OpenAI API Key가 필요합니다.');
+            const body = { model:'text-embedding-3-small', input: first50 };
+            const res = await fetch('https://api.openai.com/v1/embeddings', {
+              method:'POST', headers:{ 'Content-Type':'application/json', 'Authorization':'Bearer '+state.openaiKey }, body: JSON.stringify(body)
+            });
+            if(!res.ok){
+              const t = await res.text(); throw new Error('OpenAI 임베딩 오류: ' + t);
+            }
+            const data = await res.json();
+            // OpenAI 응답은 input 순서와 다를 수 있으므로, input과 index를 맞춰야 함
+            // 하지만 text-embedding-3-small은 input 배열 순서대로 반환함
+            vectors = (data.data||[]).map(d=>d.embedding);
+          }else{
+            if(!state.geminiKey) throw new Error('Gemini API Key가 필요합니다.');
+            const url = 'https://generativelanguage.googleapis.com/v1beta/models/text-embedding-004:batchEmbedContents?key='+encodeURIComponent(state.geminiKey);
+            const body = {
+              requests: first50.map(t=>({ content: { parts:[{ text: t }] } }))
+            };
+            const res = await fetch(url, { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify(body) });
+            if(!res.ok){ const t = await res.text(); throw new Error('Gemini 임베딩 오류: ' + t); }
+            const data = await res.json();
+            // Gemini 응답은 { embeddings: [ { values: [...] }, ... ] }
+            if (!Array.isArray(data.embeddings)) throw new Error('Gemini 임베딩 응답 형식 오류');
+            vectors = data.embeddings.map(e=>Array.isArray(e.values)?e.values:[]);
+          }
+          const dim = vectors?.[0]?.length || '-';
+          mDim.textContent = String(dim);
+          const lines = [];
+          first50.forEach((tok,i)=>{
+            const v = vectors[i] || [];
+            lines.push(`${i+1}. "${tok}" → [${v.slice(0,12).map(n=>Number(n).toFixed(4)).join(', ')}${v.length>12?' …':''}] (dim=${v.length})`);
+          });
+          embedBox.textContent = lines.join('\n');
+        }catch(err){
+          embedBox.textContent = '오류: ' + (err?.message || err);
+          mDim.textContent = '-';
+        }
       }
-
-      const dim = vectors?.[0]?.length || '-';
-      mDim.textContent = String(dim);
-
-      // 숫자 포맷터: 숫자가 아닌 값이 나오더라도 안전하게 처리
-      const formatNum = (n) => (typeof n === 'number' && isFinite(n)) ? n.toFixed(4) : (String(n).length>12 ? String(n).slice(0,12) + '...' : String(n));
-      const lines = [];
-      first50.forEach((tok,i)=>{
-        const v = vectors[i] || [];
-        const shown = Array.isArray(v) ? v.slice(0,12).map(formatNum).join(', ') : String(v);
-        const dimi = Array.isArray(v) ? v.length : (v ? (v.length||String(v).length) : 0);
-        lines.push(`${i+1}. "${tok}" → [${shown}${(Array.isArray(v) && v.length>12)?' …':''}] (dim=${dimi})`);
-      });
-      embedBox.textContent = lines.join('\n');
-    }catch(err){
-      // 사용자에게 친절한 에러 메시지 표시
-      embedBox.textContent = '오류: ' + (err?.message || err);
-      mDim.textContent = '-';
-    }
-  }
 
   // Utilities
   function toast(msg){
