--- a/selfiaitest.html
+++ b/selfiaitest.html
@@ -1,1 +1,377 @@
 
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>나는 어떤 AI 능력자일까? LLM 활용 능력 테스트</title>
+    <style>
+        /* 기본 스타일링 */
+        body {
+            font-family: 'Pretendard', sans-serif;
+            background-color: #f0f4f8;
+            color: #333;
+            margin: 0;
+            padding: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
+        .container {
+            width: 100%;
+            max-width: 500px;
+            background-color: #fff;
+            border-radius: 20px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            text-align: center;
+        }
+        .screen {
+            padding: 30px;
+            display: none; /* 기본적으로 모든 화면 숨김 */
+        }
+        .screen.active {
+            display: block; /* 활성화된 화면만 보이기 */
+        }
+
+        /* 버튼 스타일 */
+        button {
+            background-color: #4a90e2;
+            color: white;
+            border: none;
+            padding: 15px 30px;
+            border-radius: 30px;
+            font-size: 18px;
+            font-weight: bold;
+            cursor: pointer;
+            transition: background-color 0.3s, transform 0.2s;
+            width: 100%;
+            margin-top: 10px;
+        }
+        button:hover {
+            background-color: #357abd;
+            transform: scale(1.02);
+        }
+        button.secondary {
+            background-color: #f0f0f0;
+            color: #555;
+        }
+        button:disabled {
+            background-color: #ccc;
+            cursor: not-allowed;
+        }
+
+        /* 헤드라인 및 텍스트 */
+        h1 {
+            font-size: 28px;
+            color: #333;
+            margin-bottom: 15px;
+        }
+        p {
+            font-size: 16px;
+            line-height: 1.6;
+            color: #555;
+        }
+
+        /* 진행 바 */
+        .progress-bar {
+            width: 100%;
+            background-color: #e0e0e0;
+            border-radius: 10px;
+            margin-bottom: 20px;
+        }
+        .progress {
+            width: 20%; /* 예시, JS로 동적 변경 */
+            height: 10px;
+            background-color: #4a90e2;
+            border-radius: 10px;
+        }
+        .progress-text {
+            font-size: 14px;
+            margin-bottom: 20px;
+            color: #777;
+        }
+
+        /* 질문 및 선택지 */
+        .question-box {
+            background-color: #f9f9f9;
+            padding: 20px;
+            border-radius: 15px;
+            margin-bottom: 20px;
+            min-height: 100px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .question-text {
+            font-size: 20px;
+            font-weight: 500;
+        }
+
+        /* 네비게이션 버튼 */
+        .nav-buttons {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 20px;
+        }
+        .nav-buttons button {
+            width: 48%;
+            font-size: 14px;
+            padding: 10px;
+        }
+        .nav-buttons button.home {
+            width: 100%;
+            margin-top: 10px;
+            background-color: #ddd;
+        }
+
+        /* 로딩 화면 */
+        .loading-animation {
+            font-size: 24px;
+            font-weight: bold;
+            padding: 50px 0;
+        }
+
+        /* 결과 화면 */
+        .result-card {
+            background-color: #4a90e2;
+            color: white;
+            padding: 20px;
+            border-radius: 15px;
+            margin-bottom: 20px;
+        }
+        .result-card h2 {
+            margin: 0;
+            font-size: 24px;
+        }
+        .result-card .icon {
+            font-size: 50px;
+            margin-bottom: 10px;
+        }
+        .result-section {
+            text-align: left;
+            margin-bottom: 25px;
+            background-color: #f9f9f9;
+            padding: 15px;
+            border-radius: 10px;
+        }
+        .result-section h3 {
+            font-size: 18px;
+            color: #333;
+            border-bottom: 2px solid #4a90e2;
+            padding-bottom: 5px;
+            margin-bottom: 10px;
+        }
+        .result-section ul {
+            padding-left: 20px;
+            margin: 0;
+        }
+        .result-section li {
+            margin-bottom: 10px;
+        }
+        .prompt-template {
+            background-color: #e6f0fa;
+            padding: 10px;
+            border-radius: 5px;
+            font-family: monospace;
+            font-size: 14px;
+        }
+        .partner-section span {
+            display: inline-block;
+            padding: 5px 10px;
+            border-radius: 15px;
+            margin-right: 5px;
+            font-size: 14px;
+        }
+        .partner-section .best {
+            background-color: #ffdddd;
+            color: #d9534f;
+        }
+        .partner-section .good {
+            background-color: #dff0d8;
+            color: #5cb85c;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="container">
+
+        <!-- ====================================================== -->
+        <!-- 화면 1: 시작 화면 -->
+        <!-- ====================================================== -->
+        <div id="start-screen" class="screen active">
+            <h1>나는 어떤 AI 능력자일까?<br>LLM 활용 능력 테스트</h1>
+            <p>
+                몇 가지 질문에 답하고 나만의 LLM 잠재력을 확인해보세요!
+                나의 AI 활용 스타일과 딱 맞는 학습 꿀팁까지 알려드려요.
+            </p>
+            <button id="start-btn">테스트 시작하기</button>
+        </div>
+
+        <!-- ====================================================== -->
+        <!-- 화면 2: 진단 화면 -->
+        <!-- ====================================================== -->
+        <div id="diagnosis-screen" class="screen">
+            <div class="progress-text"><span id="current-q">1</span> / 13</div>
+            <div class="progress-bar">
+                <div class="progress" id="progress"></div>
+            </div>
+
+            <div class="question-box">
+                <p class="question-text" id="question-text">
+                    학교에서 '미래 도시'에 대한 보고서를 쓸 때, LLM에게 어떻게 질문할까?
+                </p>
+            </div>
+
+            <div class="answer-buttons">
+                <button class="answer-btn" data-type="I">"미래 도시에 대해 알려줘."</button>
+                <button class="answer-btn" data-type="S">"초등학생 수준에 맞춰, 미래 도시의 특징 3가지를 교통, 환경, 주거로 나누어 설명해줘."</button>
+            </div>
+
+            <div class="nav-buttons">
+                <button id="prev-btn" class="secondary">이전 문항</button>
+                <button id="next-btn" disabled>다음 문항</button>
+                <button id="home-btn" class="secondary home">처음으로</button>
+            </div>
+        </div>
+
+        <!-- ====================================================== -->
+        <!-- 화면 3: 결과 분석 중 화면 (선택 사항) -->
+        <!-- ====================================================== -->
+        <div id="loading-screen" class="screen">
+            <div class="loading-animation">
+                결과를 분석 중입니다...
+                <p>나의 AI 잠재력은 과연?!</p>
+                <!-- 여기에 스피너나 로딩 애니메이션 추가 -->
+            </div>
+        </div>
+
+        <!-- ====================================================== -->
+        <!-- 화면 4: 결과 리포트 화면 -->
+        <!-- ====================================================== -->
+        <div id="result-screen" class="screen">
+            <!-- 유형 카드 -->
+            <div class="result-card">
+                <div class="icon">✨</div>
+                <h2 id="result-type-name">자유로운 AI 모험가</h2>
+                <p id="result-summary">호기심을 무기로 AI의 무한한 가능성을 탐험하는 낙관적인 탐험가!</p>
+            </div>
+
+            <!-- 나의 AI 활용 스타일 분석 -->
+            <div class="result-section">
+                <h3>나의 AI 활용 스타일 분석</h3>
+                <p><strong>강점:</strong> <span id="strength-text">새로운 아이디어를 빠르게 시도하고, 예상치 못한 결과에서 재미를 찾아요.</span></p>
+                <p><strong>주의할 점:</strong> <span id="weakness-text">가끔은 계획 없이 진행해서, 중요한 디테일을 놓칠 수 있어요.</span></p>
+            </div>
+
+            <!-- 추천 학습 활동 -->
+            <div class="result-section">
+                <h3>성장을 위한 추천 학습 활동 🚀</h3>
+                <ul>
+                    <li id="step1"><strong>1단계 (입문):</strong> "AI와 친구되기: 생활 속 LLM 활용 사례 10가지 살펴보기"</li>
+                    <li id="step2"><strong>2단계 (실습):</strong> "나만의 AI 캐릭터 만들기: ChatGPT로 소설 주인공과 대화하기"</li>
+                    <li id="step3"><strong>3단계 (윤리):</strong> "AI가 만든 정보, 어디까지 믿어야 할까? 팩트체크 방법 배우기"</li>
+                </ul>
+            </div>
+
+            <!-- 당장 써먹는 한 줄 프롬프트 템플릿 -->
+            <div class="result-section">
+                <h3>당장 써먹는 한 줄 프롬프트 템플릿 📝</h3>
+                <ul>
+                    <li><p class="prompt-template">내가 [주제]에 대한 유튜브 영상을 만들려고 해. 재치 있는 인트로 멘트 5개만 추천해줘.</p></li>
+                    <li><p class="prompt-template">[주인공]이 [장소]에서 [사건]을 겪는 내용으로, 한 문단짜리 짧은 이야기를 만들어줘.</p></li>
+                    <li><p class="prompt-template">만약 사과가 말을 할 수 있다면, 뉴턴의 만유인력 법칙에 대해 어떻게 생각할까? 사과의 입장에서 이야기해줘.</p></li>
+                </ul>
+            </div>
+
+            <!-- 나와 잘 맞는 프롬프트 유형 -->
+            <div class="result-section partner-section">
+                <h3>나와 잘 맞는 프롬프트 유형</h3>
+                <p>
+                    <strong>환상의 짝꿍 💖:</strong> <span id="best-partner" class="best">체계적인 AI 탐험가</span>
+                    <br> 당신의 아이디어를 현실로 만들어 줄 최고의 파트너!
+                </p>
+                <p>
+                    <strong>도움이 되는 친구 👍:</strong> <span id="good-partner" class="good">현실적인 문제 해결사</span>
+                    <br> 당신이 놓치는 부분을 꼼꼼하게 챙겨줄 든든한 친구!
+                </p>
+            </div>
+            
+            <!-- 공유 및 저장 기능 -->
+            <div class="share-buttons">
+                <button id="download-btn">결과 이미지 다운로드</button>
+                <button id="kakao-share-btn">카카오톡으로 공유하기</button>
+                <button id="copy-link-btn" class="secondary">링크 복사하기</button>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- ====================================================== -->
+    <!-- JavaScript 영역 (기능 구현을 위한 가이드) -->
+    <!-- ====================================================== -->
+    <script>
+        // 이 부분에 JavaScript 로직을 추가하여 테스트를 동적으로 만듭니다.
+
+        // ------------------------------------------------------
+        // 1. 필요한 HTML 요소들을 변수에 할당
+        // ------------------------------------------------------
+        const startScreen = document.getElementById('start-screen');
+        const diagnosisScreen = document.getElementById('diagnosis-screen');
+        const loadingScreen = document.getElementById('loading-screen');
+        const resultScreen = document.getElementById('result-screen');
+
+        const startBtn = document.getElementById('start-btn');
+        const prevBtn = document.getElementById('prev-btn');
+        const nextBtn = document.getElementById('next-btn');
+        const homeBtn = document.getElementById('home-btn');
+
+        // ------------------------------------------------------
+        // 2. 문항 데이터 정의
+        // ------------------------------------------------------
+        const questions = [
+            // 여기에 13개의 질문 객체를 배열로 정의합니다.
+            // 예: { q: '질문 내용', a: [ {text: '답변1', type: 'I'}, {text: '답변2', type: 'S'} ] },
+        ];
+
+        // ------------------------------------------------------
+        // 3. 진단 로직 함수 정의
+        // ------------------------------------------------------
+        
+        // `startBtn` 클릭 시:
+        // - startScreen을 숨기고 diagnosisScreen을 표시합니다.
+        // - 첫 번째 질문을 화면에 렌더링합니다.
+
+        // `answer-btn` 클릭 시:
+        // - 선택된 답변의 유형(data-type)을 저장합니다.
+        // - nextBtn을 활성화합니다.
+        // - (선택사항) 바로 다음 질문으로 넘어갑니다.
+
+        // `nextBtn` 클릭 시:
+        // - 다음 질문을 화면에 렌더링합니다.
+        // - 마지막 질문일 경우, loadingScreen을 표시하고 결과 계산 함수를 호출합니다.
+
+        // `prevBtn` 클릭 시:
+        // - 이전 질문으로 돌아갑니다.
+
+        // `homeBtn` 클릭 시:
+        // - 모든 진행 상황을 초기화하고 startScreen을 표시합니다.
+
+        // 결과 계산 함수:
+        // - 저장된 답변 유형들을 바탕으로 4가지 진단 축(C/A, S/E, S/I, C/O)의 점수를 계산합니다.
+        // - 최종 유형을 결정합니다. (예: CEIO)
+        // - loadingScreen을 숨기고 resultScreen을 표시합니다.
+        // - 결정된 유형에 맞는 텍스트와 이미지로 결과 페이지 내용을 업데이트합니다.
+
+        // 공유 및 다운로드 함수:
+        // - `download-btn` 클릭 시: canvas API를 사용해 결과 카드를 이미지로 생성하고 다운로드합니다.
+        // - `kakao-share-btn` 클릭 시: 카카오 SDK를 사용하여 공유 기능을 구현합니다.
+        // - `copy-link-btn` 클릭 시: 현재 페이지 URL을 클립보드에 복사합니다.
+
+        console.log("LLM 자가진단 UI가 준비되었습니다. JavaScript로 기능을 구현해주세요.");
+
+    </script>
+</body>
+</html>
