--- a/16type.html
+++ b/16type.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI 역량 진단 결과 리포트</title>
+    <title>AI 챗봇 활용 수준 진단 결과 리포트</title>
     <style>
         /* Google Fonts Import */
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap');
