--- a/setup_llm.html
+++ b/setup_llm.html
@@ -718,7 +718,17 @@
                     <input type="range" id="presence-penalty" name="presence-penalty" min="0.0" max="2.0" value="0.0" step="0.1">
                 </div>
             </div>
+			<div class="slider-label">&nbsp;</div>
+			<div class="form-group">
+				<label for="knowledge-file" class="prop-label">지식 파일</label>
+				<select id="knowledge-file" class="prop-select">
+					<option>한국역사_근대사.pdf</option>
+					<option>세계역사_근대사.pdf</option>
+				</select>
+			</div>
         </div>
+		
+		
 
     </div>
 
